--- a/Views/Declare/OnelineIn_Edit.cshtml
+++ b/Views/Declare/OnelineIn_Edit.cshtml
@@ -99,7 +99,7 @@
                 </td>
                 <td>
                     <label for="BAORUHAIGUANTIME"> 报入海关时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="BAORUHAIGUANTIME" name="BAORUHAIGUANTIME" editable="false" />
+                    <input class="easyui-textbox time_input" type="text" id="BAORUHAIGUANTIME" datatype="DECLSTATUS" name="BAORUHAIGUANTIME" editable="false" />
                     <a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -110,7 +110,7 @@
             <tr>
                 <td>
                     <label for="SHANDANKAISHITIME"> 删单开始时间:</label>
-                    <input class="easyui-textbox  time_input" id="SHANDANKAISHITIME" data-options="text:'填充时间'" type="text" name="SHANDANKAISHITIME" disabled="disabled" />
+                    <input class="easyui-textbox  time_input" id="SHANDANKAISHITIME" data-options="text:'填充时间'" datatype="SHANDANKAISHI" name="SHANDANKAISHITIME" editable="false" />
                     <a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -119,7 +119,7 @@
                 </td>
                 <td>
                     <label for="SHANDANWANCHENGTIME"> 删单完成时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="SHANDANWANCHENGTIME" name="SHANDANWANCHENGTIME" disabled="disabled" />
+                    <input class="easyui-textbox time_input" id="SHANDANWANCHENGTIME" datatype="SHANDANWANCHENG" name="SHANDANWANCHENGTIME" editable="false" />
                     <a href="javascript:void(0)" datatype="SHANDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -130,7 +130,7 @@
             <tr>
                 <td>
                     <label for="GAIDANKAISHITIME"> 改单开始时间:</label>
-                    <input class="easyui-textbox  time_input" id="GAIDANKAISHITIME" data-options="text:'填充时间'" type="text" name="GAIDANKAISHITIME" disabled="disabled" />
+                    <input class="easyui-textbox  time_input" id="GAIDANKAISHITIME" data-options="text:'填充时间'"  name="GAIDANKAISHITIME"  editable="false" />
                     <a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -139,7 +139,7 @@
                 </td>
                 <td>
                     <label for="GAIDANWANCHENGTIME"> 改单完成时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="GAIDANWANCHENGTIME" name="GAIDANWANCHENGTIME" disabled="disabled" />
+                    <input class="easyui-textbox time_input" id="GAIDANWANCHENGTIME" name="GAIDANWANCHENGTIME" editable="false" />
                     <a href="javascript:void(0)" datatype="GAIDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -150,7 +150,7 @@
             <tr>
                 <td>
                     <label for="DANZHENGFANGXINGTIME"> 单证放行时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" disabled="disabled" />
+                    <input class="easyui-textbox time_input"  id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" editable="false" />
                     <a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -159,7 +159,7 @@
                 </td>
                 <td>
                     <label for="XIAOBAOTIME"> 销保时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="XIAOBAOTIME" name="XIAOBAOTIME" disabled="disabled" />
+                    <input class="easyui-textbox time_input"  id="XIAOBAOTIME" name="XIAOBAOTIME" editable="false" />
                     <a href="javascript:void(0)" datatype="XIAOBAO" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -170,7 +170,7 @@
             <tr>
                 <td>
                     <label for="CHAYANSTARTTIME"> 查验起始时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" disabled="disabled" />
+                    <input class="easyui-textbox time_input"  id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" editable="false" />
                     <a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -179,7 +179,7 @@
                 </td>
                 <td>
                     <label for="CHAYANENDTIME"> 查验完成时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="CHAYANENDTIME" name="CHAYANENDTIME" disabled="disabled" />
+                    <input class="easyui-textbox time_input"   id="CHAYANENDTIME" name="CHAYANENDTIME" editable="false" />
                     <a href="javascript:void(0)" datatype="CHAYANEND" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -190,7 +190,7 @@
             <tr>
                 <td>
                     <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" disabled="disabled" />
+                    <input class="easyui-textbox time_input"  id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
                     <a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
@@ -333,8 +333,7 @@
                     options.stopFirstChangeEvent = false;
                     return;
                 }
-                debugger;
-                var type = this.getAttribute("datatype");
+                var type = $(this).nextAll()[1].getAttribute("datatype");
                 var id_val = "#" + this.id;
                 var date = $(id_val).datetimebox('getValue');
                 var ID = getQueryString('ID');
@@ -348,6 +347,7 @@
                     type: 'post',
                     dataType: 'json',
                     success: function (data) {
+                        debugger;
                         if (data.Success == true) {
                             var name = "#" + type + 'USERNAME';
                             $(name).textbox('setValue', data.name);
