后台管理三个页面的方法修改完成

--- a/Views/Common/Attachment_List.cshtml
+++ b/Views/Common/Attachment_List.cshtml
@@ -1,75 +1,98 @@
-﻿<link href="/js/Extjs42/resources/css/ext-all-gray.css" rel="stylesheet" type="text/css" />
-<script src="/js/Extjs42/bootstrap.js" type="text/javascript"></script>
-<script type="text/javascript">
-    Ext.onReady(function () {
-        var store = Ext.create('Ext.data.JsonStore', {
-            fields: ['ID', 'FWONO', 'FOONO', 'FILENAME', 'SIZES', 'CREATETIME', 'CREATENAME', 'STATUS'],
-            pageSize: 20,
-            proxy: {
-                type: 'ajax',
-                url: '/Common/LoadAttachmentList',
-                reader: {
-                    root: 'rows',
-                    type: 'json',
-                    totalProperty: 'total'
+﻿<script type="text/javascript">
+    // 查询条件  --单据号
+    var search_code = [
+        { code: 'FWONO', name: 'FWO订单号', selected: true },
+        { code: 'FOONO', name: 'FOO指令服务号' }
+    ];
+    // 查询条件  --状态
+    var businessin_createname = [
+        { name: '管理员' },
+        { name: '游客' }
+    ];
+    $(function () {
+        $("#datagrid").datagrid({
+            onDblClickRow: function (rowIndex, rowData) {
+                var host = window.location.host;
+                if (rowData) {
+                    window.open("http://" + host + "/Common/Attachment_Edit?FWONO=" + rowData.FWONO + "&FOONO=" + rowData.FOONO);
                 }
-            },
-            autoLoad: true,
-            listeners: {
-                //beforeload: function () {
-                //    store_Trade.getProxy().extraParams = {
-                //        busitypeid: 11,
-                //        OnlySelf: Ext.get('OnlySelfi').el.dom.className,
-                //        seniorsearch: seniorcondition,
-                //        CONDITION1: Ext.getCmp('CONDITION1').getValue(), VALUE1: Ext.getCmp("CONDITION1_1").getValue(),
-                //        CONDITION2: Ext.getCmp('CONDITION2').getValue(), VALUE2: Ext.getCmp("CONDITION2_1").getValue(),
-                //        CONDITION3: Ext.getCmp('CONDITION3').getValue(), VALUE3: Ext.getCmp("CONDITION3_1").getValue(),
-                //        CONDITION4: Ext.getCmp('CONDITION4').getValue(), VALUE4_1: Ext.Date.format(Ext.getCmp("CONDITION4_1").getValue(), 'Y-m-d H:i:s'), VALUE4_2: Ext.Date.format(Ext.getCmp("CONDITION4_2").getValue(), 'Y-m-d H:i:s'),
-                //        CONDITION5: Ext.getCmp('CONDITION5').getValue(), VALUE5: Ext.getCmp("CONDITION5_1").getValue(),
-                //        CONDITION6: Ext.getCmp('CONDITION6').getValue(), VALUE6: Ext.getCmp("CONDITION6_1").getValue(),
-                //        CONDITION7: Ext.getCmp('CONDITION7').getValue(), VALUE7: Ext.getCmp("CONDITION7_1").getValue(),
-                //        CONDITION8: Ext.getCmp('CONDITION8').getValue(), VALUE8_1: Ext.Date.format(Ext.getCmp("CONDITION8_1").getValue(), 'Y-m-d H:i:s'), VALUE8_2: Ext.Date.format(Ext.getCmp("CONDITION8_2").getValue(), 'Y-m-d H:i:s')
-                //    }
-                //}
-            }
-        })
-
-        var pgbar = Ext.create('Ext.toolbar.Paging', {
-            displayMsg: '显示 {0} - {1} 条,共计 {2} 条',
-            store: store,
-            id: 'pagebar',
-            displayInfo: true
-        })
-        var gridpanel = Ext.create('Ext.grid.Panel', {
-            renderTo: "div_attachment",
-            store: store,
-            height: 500,
-            selModel: { selType: 'checkboxmodel' },
-            bbar: pgbar,
-            enableColumnHide: false,
-            columns: [
-            { xtype: 'rownumberer', width: 35 },
-            { header: 'ID', dataIndex: 'ID', hidden: true  },
-            { header: 'FWO订单号', dataIndex: 'FWONO', width: 120  },
-            { header: 'FOO指令服务号', dataIndex: 'FOONO', width: 120  },
-            { header: '文件名称',  dataIndex: 'FILENAME', flex:1 },            
-            { header: '上传人', dataIndex: 'CREATENAME', width: 100 },
-            { header: '上传时间', dataIndex: 'CREATETIME', width: 130 }
-            ],
-            listeners:
-            {
-                'itemdblclick': function (view, record, item, index, e) {
-                    window.open("/Common/Attachment_Edit?FWONO=" + record.data.FWONO + "&FOONO=" + record.data.FOONO, '');
-                    //opencenterwin("/Common/Attachment_Edit?FWONO=" + record.data.FWONO + "&FOONO=" + record.data.FOONO, 1000, 600);
-                }
-            },
-            viewConfig: {
-                enableTextSelection: true
-            }
-        })
+            } 
+        });
+        $('#searchform #search_code').combobox({
+            data: search_code,
+            valueField: 'code',
+            textField: 'name'
+        });
+        $('#searchform #businessin_createname').combobox({
+            data: businessin_createname,
+            valueField: 'name',
+            textField: 'name'
+        });
     })
 </script>
-
-<div id="div_attachment">
-
-</div> 
+<div class="ibox-content">
+    <div class="table-responsive">
+        <table id="datagrid" class="easyui-datagrid" title="随附文件" style="height:auto;min-height:500px;max-height:800px"
+               data-options="url: '/Common/LoadAttachmentList',
+                            rownumbers: true,
+                            dataType: 'json',
+                            method: 'get',
+                            toolbar: '#tb',
+                            pageSize: 20,
+                            pageList: [20, 40, 60, 80, 100, 300],
+                            pagination: true,">
+            <thead>
+                <tr>
+                    <th data-options="field: 'ID',width:80,checkbox:true"></th>
+                    <th data-options="field:'FWONO',width:200,sortable:true">FWO订单号</th>
+                    <th data-options="field:'FOONO',width:200,sortable:true">FOO指令服务号</th>
+                    <th data-options="field:'FILENAME',width:300,sortable:true">文件名称</th>
+                    <th data-options="field:'CREATENAME',width:150,sortable:true">上传人</th>
+                    <th data-options="field:'CREATETIME',width:150,sortable:true">上传时间</th>
+                </tr>
+            </thead>
+        </table>
+        <div id="tb">
+            <div class="tb_search">
+                <form id="searchform" method="post">
+                    <table>
+                        <tr>
+                            <td class="search_margin">
+                                <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
+                            </td>
+                            <td>
+                                <input class="easyui-textbox value placeholderclass" type="text" name="ordercode_value" placeholder="单据号" />
+                            </td>
+                            <td class="search_margin">
+                                <select class="easyui-combobox" panelheight="auto">
+                                    <option>上传人</option>
+                                </select>
+                            </td>
+                            <td>
+                                <select class="easyui-combobox combobox_width value" editable="false" id="businessin_createname" panelheight="auto" name="businessin_createname"></select>
+                            </td>
+                            <td class="search_margin">
+                                <select class="easyui-combobox" panelheight="auto">
+                                    <option>上传时间</option>
+                                </select>
+                            </td>
+                            <td>
+                                <input class="easyui-datebox value  placeholderclass" editable="false" name="starttime" placeholder="开始时间">
+                            </td>
+                            <td>
+                                <input class="easyui-datebox value  placeholderclass" editable="false" name="stoptime" placeholder="结束时间">
+                            </td>
+                        </tr>
+                    </table>
+                </form>
+            </div>
+            <div class="tb_but">
+                <div class="but_right">
+                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="search_form()"><i class="icon-search"></i> 搜索</a>
+                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="reset_form()"><i class="fa fa-retweet" aria-hidden="true"></i> 重置</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end ibox-content -->
+</div>
