--- a/Views/Common/SyncMsg_List.cshtml
+++ b/Views/Common/SyncMsg_List.cshtml
@@ -17,7 +17,6 @@
         { name: '失败' }
     ];
     $(function () {
-        loadSynclistGrid('');
         $('#searchform #search_code').combobox({
             data: search_code,
             valueField: 'code',
@@ -37,7 +36,15 @@
 </script>
 <div class="ibox-content">
     <div class="table-responsive">
-        <table id="datagrid" class="easyui-datagrid" title="同步状态" style="height:auto;min-height:500px;max-height:800px" data-options="queryParams:{BUSITYPE:'SyncMsg'}">
+        <table id="datagrid" class="easyui-datagrid" title="同步状态" style="height:auto;min-height:500px;max-height:800px"
+               data-options="url: '/Common/LoadMsgList',
+                            rownumbers: true,
+                            dataType: 'json',
+                            method: 'get',
+                            toolbar: '#tb',
+                            pageSize: 20,
+                            pageList: [20, 40, 60, 80, 100, 300],
+                            pagination: true,">
             <thead>
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
